# STM32_Cmake_Template

./: .gitignore  .gitmodules  CMakeLists.txt  stm32f0xx.cmake  stm32f1xx.cmake  stm32f4xx.cmake  stm32l4xx.cmake
BSP/: bsp.h
cmake/: git_submodules.cmake
src/: initialize-hardware.c  main.c  main.h
system/: FreeRTOSConfig.h  SourceLists.cmake  stm_system.cmake
system/f0_core/: f0_core.cmake  initialize-hardware.c
system/f0_core/include/cmsis/: stm32f030x8.h  stm32f0xx.h
system/f0_core/src/newlib/: cxx.cpp
system/f1_core/: initialize-hardware.c
system/f4_core/: f4_core.cmake  initialize-hardware.c
system/include/cmsis/: stm32f103xb.h  stm32f1xx.h
system/l4_core/: initialize-hardware.c  l4_core.cmake  stm32l4xx_hal_conf.h
system/l4_core/include/cmsis/: cmsis_device.h
system/l4_core/src/cmsis/: vectors_stm32l476.c
system/ldscripts/: mem.ld.in
